# Foreman

./: .gitattributes  .gitignore  README.md  render.yaml  smoke_test.py
apps/api/: .env.example  .env.production.example  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
apps/api/app/: main.py
apps/api/app/agents/: coder.py  llm_client.py  planner.py  reviewer.py  state.py  tester.py  tools.py
apps/api/app/core/: config.py  deps.py  logging.py  security.py
apps/api/app/db/: base.py  models.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 3f8a2b1c4e7d_add_embedding_repo_status.py  54bef8202f0f_add_user_id_to_benchmark_run.py  6f3c0f0fda0d_add_cancelled_run_status.py  98fde155bafe_add_error_message_to_runs.py  b9e1f2a3c4d5_add_pending_run_status.py  (+3 more)
apps/api/app/orchestrator/: events.py  graph.py  logging.py
apps/api/app/retrieval/: __init__.py  chunking.py  cloning.py  embeddings.py  search.py
apps/api/app/routers/: auth.py  benchmark.py  health.py  repos.py  runs.py  system.py  ws.py
apps/api/app/schemas/: auth.py  benchmark.py  repos.py  runs.py
apps/api/app/workers/: settings.py  tasks.py
apps/api/benchmark/: __init__.py  pricing.py  runner.py  tasks.py
apps/api/scripts/: migrate.sh
apps/api/tests/: conftest.py  test_auth.py  test_benchmark.py  test_coder.py  test_events.py  test_graph.py  test_health.py  test_llm_client.py  test_log_step.py  test_planner.py  test_repos.py  test_reviewer.py  test_runs.py  test_search.py  test_system.py  test_tester.py  test_workers.py  test_ws.py
(+67 files in other folders)
