[project]
name = "foreman-api"
version = "0.1.0"
description = "Foreman autonomous agent platform — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "pydantic[email]>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis[hiredis]>=5.2",
    "alembic>=1.13",
    "pgvector>=0.3",
    "pwdlib[argon2]>=0.2",
    "pyjwt>=2.8",
    "gitpython>=3.1",
    "voyageai>=0.2",
    "arq>=0.25",
    "google-genai>=1.0",
    "langgraph>=0.3",
    "e2b-code-interpreter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "pytest-mock>=3.14",
    "ruff>=0.9",
    "pyright>=1.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["app/db/migrations", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# conftest must set env vars before importing app modules — E402 is expected here
"tests/conftest.py" = ["E402"]
